Add a paystack card page

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <li class="list-item"><a class="list-item-link icon" href="#">Developers</a></li>
                 <a class="list-item-link "><i class="fas fa-sort-down"></i></a>
 
-                <li class="list-item"><a class="list-item-link icon" href="#">Support</a></li>
+                <li class="list-item"><a class="list-item-link icon" href="card.html">Support</a></li>
                 <a class="list-item-link"><i class="fas fa-sort-down"></i></a>
 
                 <li class="list-item"><a class="list-item-link" href="#">Login</a></li>
@@ -43,6 +43,10 @@
         <h1 class="jumbotron-header">Trusted by 40,000+ businesses</h1>
         <p class="jumbotron-text">Thousands of organisations of all sizes trust Paystack to grow their <br/>business.</p>
     </div>
+
+
     
+    <script src="app.js">
+    </script>
 </body>
 </html>
