--- a/card.html
+++ b/card.html
@@ -10,11 +10,11 @@
 <body>
     <div class="card">
         <div class="card-inside">
-            <img class="startup" src="../images/For-Entrepreneurs_180823_165709.svg" alt="A picture depicting startups">
+            <img class="startup" src="images/For-Entrepreneurs_180823_165709.svg" alt="A picture depicting startups">
             <h3>Paystack for <br /> Entrepreneurs</h3>
             <div class="card-text">From startup to scale-up, we can support<br /> you at every stage of your business' <br />growth</div>
             <div class="btn">
-                <img clas="right" src="../images/arrow right new.svg" alt="A right icon">
+                <img clas="right" src="images/arrow right new.svg" alt="A right icon">
                 <p>Learn More</p>
             </div>
         </div>
